@@ -1,8 +1,9 @@
 indicator-sound-switcher (2.3.6) hirsute; urgency=low
 
   * Allow assigning same keyboard shortcut to multiple ports (#106)
+  * Display card's vendor and product name in Preferences (#105)
 
- -- Dmitry Kann <yktooo@gmail.com>  Fri, 18 Jun 2021 13:21:03 +0200
+ -- Dmitry Kann <yktooo@gmail.com>  Fri, 18 Jun 2021 14:09:32 +0200
 
 indicator-sound-switcher (2.3.5.2-1) focal; urgency=low
 
